--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+@import url('https://fonts.cdnfonts.com/css/graphik');
+
+* {
+  text-decoration: none !important;
+  font-family: 'graphik', 'sans-serif';
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navlocker {
+  background-color: rgb(23 23 23);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.herodiv {
+  background-image: linear-gradient(to right, #733a5e, #cc7873, #301b1f);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hero1 {
+  /* overflow: hidden !important; */
+  overflow-x: scroll;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.scrollbody {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.scrollbody::-webkit-scrollbar {
+  display: none;
 }
+
+.no-outline:focus{
+  outline: none;;
+}
+
+.MediaCardB {
+  width: 200px !important;
+ }
+ .foot {
+  background-color: whitesmoke;
+ }
+ .foot1{
+  margin-right: 70px;
+ }
+
+ /* .border2{
+  border: 2px solid black;
+ } */
+
+/* @media screen and (min-width: 992px) {
+ .MediaCard {
+  width: 300px!important;
+  
+ }
+} */
+@media screen and (min-width: 768px) {
+ .MediaCard {
+  width: 270px!important;
+  
+ }
+  
+} 
+
